--- a/client/src/pages/SpotPage.css
+++ b/client/src/pages/SpotPage.css
@@ -1,20 +1,20 @@
-.carouselContainer img{
+.carouselContainer {
     object-fit: cover;
     object-position: center center;
-    height: 250px;
+    height: 400px;
     width:100%;
     position: relative;
     z-index: .5;
 
 }
-
+/* 
 .infoCont{
        position:absolute;
        right: 100px;
        top: 500px;
        z-index: 1000;
        box-shadow: 5px 10px 10px rgb(148, 146, 146);
-}
+} */
 .papa{
     position: relative;
 }
